@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.327 2006/03/09 15:10:16 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.328 2006/03/16 11:14:46 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -302,6 +302,9 @@ PH/58 Allow for the insertion of a newline as well as a space when a string
 
 PH/59 Added the following errors that can be detected in retry rules: mail_4xx,
       data_4xx, lost_connection, tls_required.
+
+PH/60 When a VRFY deferred or FAILED, the log message rather than the user
+      message was being sent as an SMTP response.
 
 
 Exim version 4.60
